--- a/Result_Scan_Model/View/LoginView.resx
+++ b/Result_Scan_Model/View/LoginView.resx
@@ -118,6 +118,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="hiddenPass.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6AAAAOgBhtX2rwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAStSURBVFhH7Zbf
+        T1pnHMYPJShOEGT4Y3goA2XWmTaLmmxLtov1emq3q6XLlq5rtt1tF8vixZb4F2zrlnWp+LPqAkytAlIt
+        WI6OBTYRpFRAUEERZtHqJFM6mL7Li+fgy0FXbbybT/Ikb87z+T7vOcCbA4ad6lRPI6BmVj/+oaJq+8Yr
+        0HCNgeYzdOxEhYOv816MKT6oirXqq2KKv6piCkAzvDZ8LtZyBbL0+acXUDMr1zs+qVzvjFaud4IjOnpu
+        vetjOEuvO5YqV2/VyaM90/JoD6D8QrRnXR7taZNHuz+tWOlthIZrebS3XR7t2UBZebTbXrHaXUPvPZIq
+        Ispr5RHV4/KICqT8h8pfHla+U+HX59JZSjCTRdSXyyPK+fRcRBWXhVVX6ezhAoAhDfVdl4b6AemELNTX
+        VD2jzkEx2byaV754uxYartEM3oh0qf9Laag/SfXIQgPfwm6UyxZQMyUBbZskoAEpB4dCkqD2VRSRLgxd
+        kAQ1WklQk9znNEl4DZ8fPI+y4gXd65KAJoxwiv88LbhPf1Ps1wPS7jK/Hs/M77wt9uvjCEN3HJ+78xY6
+        I10Yloj9+lmEuYHmaeEeQxPuMQDSLtGsSZiRe40XcI8hTuY7uMfQIvKM1ou9dxtwr1GBewy7ZLZ9duZe
+        NTpbMjdajHsMnnS/2/gFmmNlM2MXRS5iR+QyAZHLFBR774oyAAzDRC6Tbi8ndspcpjez8gdEfbrjPjGU
+        lbvGxSKXaSnd8YB4IxWU2ieKSh3mcKnDDEqnzXGRcyLr2DzvMPFLHeYkZEocv7TQc0rPTZtbUz0Oc0Jg
+        tRZk5XZzHdyDZMIim0mIFdssA8WTVgBdNGk98LgIp6y1FFPyu6WenlMqmbQ0UJzQZsl6ECi4B8XAvbEi
+        y9SA0DoFoIus9oNvwDpVSzFCy9ShN/Cs1dG4z9kOvoHf7B+m97NMDWCcCXuRwOwMC8xOIDA740Kzq44+
+        VGiz8QRmZ4JkFPSckuDX+20kc+BXALvhHiSzzDXZ9n7ovPGZi3zCvcMn3IBPuJcEJmfG8YPiE24tme8U
+        Ep6sT4E/PtPAJ9y7KWbcPUjPBeMuMewmO/7hE969HyElnsHfVGD0AdJuzuhcMZrnGzzneUbfNpnv8oyz
+        rVyDvxGaZ/S1wWswgwznnj/jGMKugjGfh+rnjvk+R/O0CkYCP3JHAoC0lz+8IEFz7mjgEnc0sI0wmd7L
+        GtGZQsP8WdhFMZyR4PdonqlmcCZfF2rN14UA6TBXu/gainA0i9Uc3fJQvi6UQLgERxcahBnKwtl8XWiZ
+        4ji60E24B8pkCwBG3uDK9bzBFUA6yb798CtM7898C+ofFTyjjdRAw3VGZgqw4QycTfcMrXzz5JcRInbf
+        o6u5fWvx3L41sOfVhZz+1ctYR4BNZ9PqCLBzfl59F7L7c2vb7P61K3T0SGIp/6xhqTftLNUmQLzBUm52
+        sJSbn+WoYpeg4Zql2uxMZZmsjaXeeIneezw1gzPM3q2PmL1bD5m9W+CIXmH+tHXtyd/3cdQB2Fhn4n1G
+        199aRlcixuhKAJpjjM6kBruVeA/7Dhz6r+lkBJ+sHciwdvByygogPdmnPdX/Sf8ChXKVzzywT/4AAAAA
+        SUVORK5CYII=
+</value>
+  </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
